--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@tippy.js/react": "^3.1.1",
     "axios": "^0.23.0",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
+    "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.3",
