--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.3",
+    "react-player": "^2.9.0",
     "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.3",
