--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "@tippy.js/react": "^3.1.1",
     "axios": "^0.23.0",
+    "chart.js": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-color": "^2.19.3",
     "react-countup": "^6.0.0",
     "react-dom": "^17.0.2",
